clusters/corpus/apps/common/ingress-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: default
spec:
  selector:
    app: default-backend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: router
  namespace: default
spec:
  ports:
    - name: http
      port: 443
      protocol: TCP
      targetPort: 443
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: takeout-lb
  namespace: default
spec:
  ports:
    - name: k8s
      port: 6443
      protocol: TCP
      targetPort: 6443
  clusterIP: None
  type: ClusterIP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: router
  namespace: default
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    port: 443
    protocol: TCP
endpoints:
  - addresses:
      # list all external ips for this service
      - 192.168.1.1
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: takeout-lb
  namespace: default
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    port: 6443
    protocol: TCP
endpoints:
  - addresses:
      # list all external ips for this service
      - 192.168.1.1
